welcome.lessons.welcome.methods.slug.SlugTracking.scala.code


def Hunt(){
  setCouleurBrosse(Color.gray)
  if (isFacingTrail()==true){
      baisseBrosse()
    	avance()
      leveBrosse()
  }
  
}


